added the first batch of catherine's suggestion

--- a/paperdraft.tex
+++ b/paperdraft.tex
@@ -167,7 +167,7 @@ Here, $\gamma_{\rm{t}}$ and $\gamma_\times$ denote the tangential- and cross-com
 The shear correlation functions are the prime estimators to quantify a cosmic-shear signal, since it is simple to include a weighting of the shear measurements into the correlation functions and, contrary to the power spectrum, one does not have to worry about the shape of the survey footprint or masked regions, or model the noise contribution. 
 For this analysis we will follow the assumption that a deeper pointing shows a stronger shear signal $\gamma^{\rm{obs}}(\b\theta) = W(\b\theta)\gamma(\b\theta)$ as described above. This assumption implies that a higher redshift just increases the amplitude of the shear signal, but as can clearly be seen by inspecting shear correlation functions of different redshift distributions, the change of the signal is extremely scale-dependent and not just a multiplication with a constant factor. In other words, not just the average shear changes as a function of redshift, but also its entire two-point statistics. However, this should serve as a reasonable first approximation for small variations in mean source redshift. Additionally, we assume that a greater depth does not only lead to a stronger average shear, but also to a higher galaxy number density, implying a correlation between those two quantities.
 
-Let $N^i(\b \theta),N^j(\b\theta)$ be the average weighted number of galaxies\footnote{Instead of using the actual number of galaxies, we take the effective number density times respective area, as defined in \citet{Kuijken:2015}. Due to this we account for different weighting of galaxies in the shear correlation functions as well as in the average redshift distribution.} per pointing in redshift bins $i$ and $j$ and let $W^i(\b \theta),W^j(\b\theta)$ be the weighting of average shear. The observed correlation functions $\xi^{ij,\text{obs}}_\pm(\theta)$ now change from uniform depth, $\xi_\pm^{ij,\rm{uni}}(\theta)$, via %\citep[see][]{2002A&A...396....1S}
+Let $N^i(\b \theta),N^j(\b\theta)$ be the average weighted number of galaxies\footnote{Instead of using the actual number of galaxies, we take the effective number density, as defined in \citet{Kuijken:2015}, scaled by the respective survey area. Due to this we account for different weighting of galaxies in the shear correlation functions as well as in the average redshift distribution.} per pointing in redshift bins $i$ and $j$ and let $W^i(\b \theta),W^j(\b\theta)$ be the weighting of average shear. The observed correlation functions $\xi^{ij,\text{obs}}_\pm(\theta)$ now change from uniform depth, $\xi_\pm^{ij,\rm{uni}}(\theta)$, via %\citep[see][]{2002A&A...396....1S}
 \begin{align}
 \xi^{ij,\text{obs}}_\pm(\theta) = & \frac{\la N^i(\bth)N^j(\bthp)\gamma^{i,\rm{obs}}_{\rm t}(\bth)\gamma^{j,\rm{obs}}_{\rm t}(\bthp)\ra }{\la N^i(\bth)N^j(\bthp)\ra} \\
  & \pm \frac{\la N^i(\bth)N^j(\bthp)\gamma^{i,\rm{obs}}_\times(\bth)\gamma^{j,\rm{obs}}_\times(\bthp)\ra }{\la N^i(\bth)N^j(\bthp)\ra} \nonumber\\
@@ -209,6 +209,7 @@ When an observer now calculates the model correlation functions $\xi^{ij}_\pm$ w
 & \times \left[1 + \la n^iw^i\ra + \la n^jw^j\ra + E(\theta)\left(\la n^in^j\ra + \la n^iw^j\ra \right.\right. \nonumber\\
 & \left.\left. + \la n^j w^i\ra + \la w^iw^j\ra\right)\right]\inv
 \, .
+\label{eq:xipm_analytic}
 \end{align}
 It is interesting to note that $\xi^{ij}_\pm = \xi_\pm^{ij,\rm{obs}}$ holds wherever $E(\theta)=0$, so we expect the observed and the modelled correlation functions to be equivalent on scales where the depth is uncorrelated. One thing left to determine is how to define the weight-function $W(\b\theta)$. For this, we will refer the reader to the beginning of Sec.~\ref{sec:results}.
 
@@ -304,7 +305,7 @@ For each pair of redshift bins we thus only have to compute eleven correlation f
 
 \section{Results}
 \label{sec:results}
-Here we apply both the analytic and the semi-analytic method to model the data from the KiDS+VIKING-450 survey \citep[KV450,][]{Wright:2018}. While the application of the semi-analytic method is straightforward, for the analytic method we need to decide how to estimate the weight function $W$ from the given redshift data. Following the separation of a survey into quantiles as in Sect. \ref{sec:xipm_semianalytic}, we define $W(\b\theta)\equiv W_n$ whenever $\b\theta$ is in a pointing of quantile $n$. For the determination of $W_n$ we test two approaches:
+We compare the analytic and semi-analytic models for a variable-depth cosmic shear measurement in a KiDS-like survey. While the application of the semi-analytic method is straightforward, for the analytic method we need to decide how to estimate the weight function $W$ from the given redshift data. Following the separation of a survey into quantiles as in Sect. \ref{sec:xipm_semianalytic}, we define $W(\b\theta)\equiv W_n$ whenever $\b\theta$ is in a pointing of quantile $n$. For the determination of $W_n$ we test two approaches:
  As a first method, following \citet{2006APh....26...91V,1997A&A...322....1B}, we estimate 
 \begin{equation}
 W_n \propto \la z \ra _n^{0.85}\, ,
@@ -318,9 +319,9 @@ While the first method suffers from the fact that the power-law index only holds
 
 \subsection{Effect on the shear correlation functions}
 
-We applied both analytic methods and the semianalytic one to data from KV450, following the separation into tomographic bins as in H18, and computed the ratio between our model for the observed correlation functions, $\xi_{\pm}^{\rm{obs}}$, and the model correlation functions, $\xi_{\pm}$, ignoring variations in depth. 
+In this Section we calculate both the analytic (Eq.~\ref{eq:xipm_analytic}) and semi-analytic (Eq.~\ref{eq:correctionfunction2}) models for the shear correlation function from a KiDS-like variable depth survey.   We adopt the tomographic bins defined in H18 and their resulting best-fit cosmological parameters to present, in Fig.~\ref{fig:all_xis}, the ratio between our models for the observed correlation functions $\xi_\pm^{\rm{obs}}$, and the standard theoretical prediction that assumes uniform depth. We find that the level of variation in the depth of the KiDS survey increases the amplitude of the observed shear correlation function, on sub-pointing scales, by up to 5\% relative to the uniform-depth case.
 
-We compare our models to mock KiDS-like data created using a modified version of the Full-sky Lognormal Astro-fields Simulation Kit \citep[\sc{FLASK},][Joachimi, Lin, et al. in prep.]{Xavier:2016}.  Using {\sc{FLASK}} lognormal fields, we generate galaxy mocks with coherent clustering and lensing signals.   Adopting a linear relation between the limiting $r$-band magnitude and the effective number density, fit to the KiDS data, we imprint the variable depth of the full KiDS-1000 footprint \citep{Kuijken:2019} on a {\sc{Healpix}}\footnote{\url{https://healpix.sourceforge.io}} grid of Nside=4096 (add cite for Healpix).  Our resolution choice represents a compromise between minimising the mock computation time and maximising the accuracy of the recovered shear signal at small angular scales.  With Nside=4096 $\xi_+$ is accurate to 7\% above ~1 arcmin, and $\xi_-$ is accurate to 10\% above ~6 arcmin.   For each \sc{Healpix} pixel in the KiDS-1000 data, the limiting $r$-band magnitude defines the effective number density of sources, and the average source redshift distribution for each tomographic redshift bin (see Fig.~\ref{fig:nofz_quantiles}).  In the uniform depth case, redshifts and number densities are sampled from the average of these tomographic sets.  The ratio of the lensing signals from the two mocks is computed, averaged over 2000 shape-noise-free realizations, and is shown in Fig.~\ref{fig:all_xis} (red).
+We compare our models to mock KiDS-like data created using a modified version of the Full-sky Lognormal Astro-fields Simulation Kit \citep[\sc{FLASK},][Joachimi, Lin, et al. in prep.]{Xavier:2016}.  Using {\sc{FLASK}} lognormal fields, we generate galaxy mocks with coherent clustering and lensing signals.   Adopting a linear relation between the limiting $r$-band magnitude and the effective number density, fit to the KiDS data, we imprint the variable depth of the full KiDS-1000 footprint \citep{Kuijken:2019} on a {\sc{Healpix}}\footnote{\url{https://healpix.sourceforge.io}} grid of Nside=4096 (add cite for Healpix).  Our resolution choice represents a compromise between minimising the mock computation time and maximising the accuracy of the recovered shear signal at small angular scales.  With Nside=4096 $\xi_+$ is accurate to 7\% above ~1 arcmin, and $\xi_-$ is accurate to 10\% above ~6 arcmin.   For each {\sc{Healpix}} pixel in the KiDS-1000 data, the limiting $r$-band magnitude defines the effective number density of sources, and the average source redshift distribution for each tomographic redshift bin (see Fig.~\ref{fig:nofz_quantiles}).  In the uniform depth case, redshifts and number densities are sampled from the average of these tomographic sets.  The ratio of the lensing signals from the two mocks is computed, averaged over 2000 shape-noise-free realizations, and is shown in Fig.~\ref{fig:all_xis} (red).
 
 The results can be seen in Fig.~\ref{fig:all_xis}.
   \begin{figure*}
