added the second batch of catherine's suggestion

--- a/paperdraft.tex
+++ b/paperdraft.tex
@@ -327,14 +327,16 @@ The results can be seen in Fig.~\ref{fig:all_xis}.
   \begin{figure*}
   \centering
   \includegraphics[width=0.9\linewidth]{images/xis_all1.pdf}
-  \caption{The ratio of correlation functions measured for a uniform depth survey, $\xi_\pm$, and a KiDS-like variable depth survey, $\xi_\pm^{\rm obs}$, cross-correlating five tomographic bins (as denoted in the upper left corner of each panel). Results from mock KiDS-like data (red) can be compared to analytic models from Sect.~2 (average redshift weighting in green-solid, and auto-correlation $\xi_+$ weighting in green-dashed) and the semi-analytic model from Sect.~4 (blue). Mock data is limited to the angular regime which is not significantly impacted by resolution effects.The numbers in the upper left corners correspond to the respective redshift bins, the upper left triangle depicts the ratios of $\xi_+$, whereas the lower right triangle depicts the ratios of $\xi_-$. The semi-analytic model was computed for the best-fit cosmology of H18. For the characteristic scale $\theta_{\rm{ref}}$ of the second analytic method we chose $\theta_{\rm{ref}} \approx 11'$.}
+  \caption{The ratio of correlation functions measured for a uniform depth survey, $\xi_\pm$, and a KiDS-like variable depth survey, $\xi_\pm^{\rm obs}$, cross-correlating five tomographic bins (as denoted in the upper left corner of each panel). Results from mock KiDS-like data (red) can be compared to analytic models from Sect.~2 (average redshift weighting in green-solid, and auto-correlation $\xi_+$ weighting in green-dashed) and the semi-analytic model from Sect.~4 (blue). Mock data is limited to the angular regime which is not significantly impacted by resolution effects.The upper left triangle depicts the ratios of $\xi_+$, whereas the lower right triangle depicts the ratios of $\xi_-$. The semi-analytic model was computed for the best-fit cosmology of H18. For the characteristic scale $\theta_{\rm{ref}}$ of the second analytic method we chose $\theta_{\rm{ref}} \approx 11'$. Note that the seemingly better agreement between the mocks and the analytic method is purely coincidental.}
   \label{fig:all_xis}
   \end{figure*}
 %We can see that for high redshift bins, the analytic and the semi-analytic methods are consistent, whereas for low redshift bins they significantly diverge. We explain this due to the facts that the analyic method uses simplifications that are redshift-dependent and only hold for small variations in redshift, which is not fulfilled in the low redshift bins.
-We observe that for high-redshift bins, both analytic methods as well as the semi-analytic one yield consistent results. Due to the redshift-dependent index in the power law of the first analytic method, it is not able to accurately describe the effect for low redshift bins. The second analytic method, however, traces the semi-analytic one pretty well for $\xi_+$. As $\xi_-$ is affected much stronger by this effect, the analytic method is not able to trace this change\footnote{The effect on $\xi_-$ is much stronger due to the fact that in Equation \eqref{eq:xipm-pkappa}, $\xi_+$ is computed by filtering the power spectrum with the 0-th order Bessel function. This function peaks at $\ell\theta=0$, meaning that for all values of $\theta$, the correlation function $\xi_+$ is sensitive to small values of $\ell$, corresponding to large separations $\theta$. However, $\xi_-$ is obtained by filtering with the 4-th order Bessel function, which peaks at approximately $\ell\theta\approx 5$, so for different $\theta$ this function is sensitive to varying parts of the convergence power spectrum. A more detailed analysis of this can be found in the Appendix of \citet{2017MNRAS.471.4412K}.}. Furthermore we note that the effect seems to be strongest in the first redshift bin, which is not surprising, as there the average redshift between pointings varies the most (compare Fig. \ref{fig:nz_of_meanz}).
+We observe that for high-redshift bins, both analytic methods as well as the semi-analytic one yield consistent results. Due to the redshift-dependent index in the power law of the first analytic method, it is not able to accurately describe the effect for low redshift bins. 
+%The second analytic method, however, traces the semi-analytic one pretty well for $\xi_+$.
+The second analytic model is entirely dependent on the choice of $\theta_{\rm{ref}}$. For $\theta_{\rm{ref}}=11'$, as chosen here, both analytic models agree very well for all redshift bins. For $\theta_{\rm{ref}}=0.\!'5$, the second analytic method agrees with the semi-analytic one pretty well for $\xi_+$. As $\xi_-$ is affected much stronger by this effect\footnote{The effect on $\xi_-$ is much stronger due to the fact that in Equation \eqref{eq:xipm-pkappa}, $\xi_+$ is computed by filtering the power spectrum with the 0-th order Bessel function. This function peaks at $\ell\theta=0$, meaning that for all values of $\theta$, the correlation function $\xi_+$ is sensitive to small values of $\ell$, corresponding to large separations $\theta$. However, $\xi_-$ is obtained by filtering with the 4-th order Bessel function, which peaks at approximately $\ell\theta\approx 5$, so for different $\theta$ this function is sensitive to varying parts of the convergence power spectrum. A more detailed analysis of this can be found in the Appendix of \citet{2017MNRAS.471.4412K}.}, the analytic method is not able to trace this change for any choice of $\theta_{\rm{ref}}$. Furthermore we note that the effect seems to be strongest in the first redshift bin, which is not surprising, as there the average redshift between pointings varies the most (compare Fig. \ref{fig:nz_of_meanz}).
 
-The simulations and the models seem to be in relatively good agreement, but there are some differences. It is noticeable that in the simulations, the value $\xi_\pm/\xi_\pm^{\rm{obs}}$ consistently stays below unity at large scales, which can be attributed to the fact that the depth of different pointings is not completely uncorrelated, as was assumed in the models. Furthermore, we notice some strong features in the simulations at lower values of $\theta$, which arise due to the resolution limit of the simulations.  %As the noise of the simulated correlation functions increases for decreasing $\theta$,\footnote{The logarithmic bins for the correlation functions were chosen in H17 such that the signal-to-noise ratio is roughly equal for each bin. However, in the simulations we ignore shape-noise, such that our only noise contribution is sample variance, which increases at lower $\theta$.} and we take the ratio of two functions that are subject to noise, these features can be attributed to sample variance. 
-In general, the semi-analytic model seems to over-estimate the effect compared to the simulations, which take the full distribution of depth into account. This slight discrepancy could be attributed to the fact that the simulations follow a finer magnitude-binning for the number densities of galaxies. Due to the fact that the discrepancies arise predominantly on small scales, the most likely reason for the discrepancy is that the simulations take the full variations in depth into account, which include scales smaller than one pointing (especially chip positions and dithering strategies). While it is impossible to include the entire sub-pointing variations in depth into our models, we tested a sub-division of one pointing into four smaller ones, all of which have a similar depth; this lowered the tension between models and simulation. Furthermore, we tested a coarser magnitude-binning in our models, which increased the tension. These tests suggest that both small-scale effects and a finer magnitude binning at least partly negate the varying depth between pointings.
+The simulations and the models seem to be in relatively good agreement, but there are some differences. It is noticeable that in the simulations, the value $\xi_\pm/\xi_\pm^{\rm{obs}}$ consistently stays below unity at large scales, which can be attributed to the fact that the depth of different pointings is not completely uncorrelated, as was assumed in the models. %Furthermore, we notice some strong features in the simulations at lower values of $\theta$, which arise due to the resolution limit of the simulations.  %As the noise of the simulated correlation functions increases for decreasing $\theta$,\footnote{The logarithmic bins for the correlation functions were chosen in H17 such that the signal-to-noise ratio is roughly equal for each bin. However, in the simulations we ignore shape-noise, such that our only noise contribution is sample variance, which increases at lower $\theta$.} and we take the ratio of two functions that are subject to noise, these features can be attributed to sample variance. 
+In general, the semi-analytic model seems to over-estimate the effect compared to the simulations, which take the full distribution of depth into account. This slight discrepancy could be attributed to the fact that the simulations follow a finer magnitude-binning for the number densities of galaxies. Due to the fact that the discrepancies arise predominantly on small scales, the most likely reason for the discrepancy is that the simulations take the full variations in depth into account, which include scales smaller than one pointing (especially chip positions and dithering strategies). While it is impossible to include the entire sub-pointing variations in depth into our models, we tested a sub-division of one pointing into four smaller ones, all of which have a similar depth; this lowered the tension between models and simulation. Furthermore, we tested a coarser magnitude-binning in our models, which increased the tension. These tests suggest that both small-scale effects and a finer magnitude binning at least partly negate the varying depth between pointings. Note that the seemingly better agreement between mocks and the analytic method is purely coincidental.
 
 An additional difference between the models and simulations is that in the models we neglect boundary effects and the sample-variance of the depth-distribution between pointings, whereas the simulations were performed with the KiDS-1000 footprint. In App.~\ref{sec:expand_eoftheta} we develop a model to extract the correction $\xi_\pm^{ij}/\xi_{\pm}^{ij,\rm{obs}}$ for a specific survey footprint. With this model we can estimate the impact of a correlated distribution of depth, the sample variance of the depth-distribution and boundary effects. We find that for a square footprint of $450\,\rm{deg}^2$ or $1000\,\rm{deg}^2$ with an uncorrelated depth-distribution, finite field effects are negligible.
 
@@ -345,7 +347,7 @@ An additional difference between the models and simulations is that in the model
 \begin{subfigure}{0.45\textwidth}
   \includegraphics[width=\textwidth]{images/mcmc_euclid.pdf}
 \end{subfigure}
-\caption{Results of the MCMC simultation to estimate the bias caused by a variation of depth in a cosmic shear survey for a KiDS-like (left) and 'Euclid-like' survey (right). The left simulation was computed using the covariance matrix of H18. As Euclid will survey approx. $15\,000\,\rm{deg}^2$, the covariance matrix of the 'Euclid-like' survey is the one of H18 divided by 30. Both simulations were computed using a fiducial cosmology of $\Omega_{\rm{m}}=0.25$ and $\sigma_8 = 0.85$.}
+\caption{Results of the MCMC simultation to estimate the bias caused by a variation of depth in a cosmic shear survey for a KiDS450-like (left) and KiDS$15\,000$-like survey (right). The left simulation was computed using the covariance matrix of H18. As Euclid will cover approx. $15\,000\,\rm{deg}^2$, the covariance matrix of the KiDS$15\,000$-like survey is the one of H18 divided by 30. Note that this does not include the higher number density and better shape measurements of Euclid, so that thi Both simulations were computed using a fiducial cosmology of $\Omega_{\rm{m}}=0.25$ and $\sigma_8 = 0.85$.}
 \label{fig:mcmc_results}
 \end{figure*} 
 
@@ -353,7 +355,7 @@ An additional difference between the models and simulations is that in the model
 
 As the next step we want to assess how the observational depth variations propagate to cosmological parameters inferred from $\xi_\pm^{ij,\rm{obs}}$ compared to $\xi_\pm^{ij}$. For this test we choose a fiducial cosmology, $\b \Phi$, and determine the relative change in $\Omega_{\rm m}$ and $\sigma_8$ compared to a reference setup with uniform depth. All other cosmological parameters are kept fixed. First, we compute the reference correlation functions, $\xi_\pm^{ij}(\theta,\b\Phi)$, for each pair of redshift bins $i,j$ using \textsc{Nicaea} as described in Sec.~\ref{sec:xipm_semianalytic}. Then we derive the observed correlation functions, $\xi_\pm^{ij,\rm{obs}}(\theta,\b\Phi)$, from Eq.~(\ref{eq:correctionfunction2}). Using the Markov-Chain Monte Carlo sampler \textsc{emcee}, we sample correlation functions $\xi_\pm^{ij}(\theta,\b\Phi')$ for different cosmologies $\b\Phi'$ and find the likelihood distribution, given the data vector $\xi_\pm^{ij,\rm{obs}}(\theta,\b\Phi)$ and the covariance-matrix computed in H18. This yields an estimate of the shift in $\Omega_{\rm m}$ and $\sigma_8$ introduced by varying depth.
 
-As can be seen in Fig.~\ref{fig:mcmc_results}, the impact of varying depth is insignificant compared to the uncertainties. To get a rough estimate for the impact on future surveys, we divide our covariance-matrix by a factor of 30, to approximately account for the increased survey area of LSST and Euclid with respect to KV450. Here, the impact on $\Omega_{\rm m}$, $\sigma_8$ and $S_8$ is significant at the level of approximately $1\sigma$. We note that even though Euclid is a space-based mission, and therefore will not suffer from variable atmospheric effects, the key photometric redshift measurement uses data from several ground-based surveys, including KiDS.   Placing a selection criteria on redshift estimation success will therefore lead to depth variations in the source galaxy sample. While the data from LSST will be practically free of variations in depth after 10 years of observations, the first few years data will include significant depth variation. The impact may be even stronger than the KiDS-like analysis presented here as the multi-band KiDS depth variation was minimised using seeing-dependent data acquisition. This is in contrast to the seeing-agnostic multi-band cadence of LSST.
+As can be seen in Fig.~\ref{fig:mcmc_results}, the impact of varying depth is insignificant compared to the uncertainties. To get a rough estimate for the impact on future surveys, we divide our covariance-matrix by a factor of 30 to model a a KiDS$15\,000$-like survey, which approximately accounts for the increased survey area of LSST and Euclid with respect to KV450. Here, the impact on $\Omega_{\rm m}$, $\sigma_8$ and $S_8$ is significant at the level of approximately $1\sigma$. As our modified covariance-matrix does not account for higher number densities and better shape measurements, this is just a lower estimate; the real effect will probably be up to twice as big. We note that even though Euclid is a space-based mission, and therefore will not suffer from variable atmospheric effects, the key photometric redshift measurement uses data from several ground-based surveys, including KiDS.   Placing a selection criteria on redshift estimation success will therefore lead to depth variations in the source galaxy sample. While the data from LSST will be practically free of variations in depth after 10 years of observations, the first few years data will include significant depth variation. The impact may be even stronger than the KiDS-like analysis presented here as the multi-band KiDS depth variation was minimised using seeing-dependent data acquisition. This is in contrast to the seeing-agnostic multi-band cadence of LSST.
 
 
 Calculating the correction $\xi_\pm^{ij}/\xi_\pm^{ij,\rm{obs}}$ for varying values of $\Omega_{\rm{m}}$ and $\sigma_8$ reveals a nontrivial dependence on the cosmology, which can be seen in Figure \ref{fig:comparecosmo}. For various combinations of $\Omega_{\rm{m}}$ and $\sigma_8$ within the $95\%$ confidence limit of KV450, we report a variation in $\xi_\pm/\xi_\pm^{\rm{obs}}$ of a few percentage points on small scales.
@@ -404,6 +406,8 @@ The results in this paper are based on observations made with ESO Telescopes at 
 \emph{Author contributions:} All authors contributed to the development and writing of this paper. The authorship list is given in two groups: the lead authors (SH, PS, HHi) followed by key contributors to the scientific analysis in alphabetical order.
 \\
 H. Hildebrandt is supported by a Heisenberg grant of the Deutsche Forschungsgemeinschaft (Hi 1495/5-1) as well as an ERC Consolidator Grant (No. 770935).
+\\
+CH acknowledges support from the European Research Council under grant number 647112, and support from the Max Planck Society and the Alexander von Humboldt Foundation in the framework of the Max Planck-Humboldt Research Award endowed by the Federal Ministry of Education and Research. 
 \\
 KK acknowledges support by the Alexander von Humboldt Foundation.
 \\
