added the second batch of catherine's suggestion

--- a/paperdraft.tex
+++ b/paperdraft.tex
@@ -321,7 +321,7 @@ While the first method suffers from the fact that the power-law index only holds
 
 In this Section we calculate both the analytic (Eq.~\ref{eq:xipm_analytic}) and semi-analytic (Eq.~\ref{eq:correctionfunction2}) models for the shear correlation function from a KiDS-like variable depth survey.   We adopt the tomographic bins defined in H18 and their resulting best-fit cosmological parameters to present, in Fig.~\ref{fig:all_xis}, the ratio between our models for the observed correlation functions $\xi_\pm^{\rm{obs}}$, and the standard theoretical prediction that assumes uniform depth. We find that the level of variation in the depth of the KiDS survey increases the amplitude of the observed shear correlation function, on sub-pointing scales, by up to 5\% relative to the uniform-depth case.
 
-We compare our models to mock KiDS-like data created using a modified version of the Full-sky Lognormal Astro-fields Simulation Kit \citep[\sc{FLASK},][Joachimi, Lin, et al. in prep.]{Xavier:2016}.  Using {\sc{FLASK}} lognormal fields, we generate galaxy mocks with coherent clustering and lensing signals.   Adopting a linear relation between the limiting $r$-band magnitude and the effective number density, fit to the KiDS data, we imprint the variable depth of the full KiDS-1000 footprint \citep{Kuijken:2019} on a {\sc{Healpix}}\footnote{\url{https://healpix.sourceforge.io}} grid of Nside=4096 (add cite for Healpix).  Our resolution choice represents a compromise between minimising the mock computation time and maximising the accuracy of the recovered shear signal at small angular scales.  With Nside=4096 $\xi_+$ is accurate to 7\% above ~1 arcmin, and $\xi_-$ is accurate to 10\% above ~6 arcmin.   For each {\sc{Healpix}} pixel in the KiDS-1000 data, the limiting $r$-band magnitude defines the effective number density of sources, and the average source redshift distribution for each tomographic redshift bin (see Fig.~\ref{fig:nofz_quantiles}).  In the uniform depth case, redshifts and number densities are sampled from the average of these tomographic sets.  The ratio of the lensing signals from the two mocks is computed, averaged over 2000 shape-noise-free realizations, and is shown in Fig.~\ref{fig:all_xis} (red).
+We compare our models to mock KiDS-like data created using a modified version of the Full-sky Lognormal Astro-fields Simulation Kit \citep[\sc{FLASK},][Joachimi, Lin, et al. in prep.]{Xavier:2016}.  Using {\sc{FLASK}} lognormal fields, we generate galaxy mocks with coherent clustering and lensing signals.   Adopting a linear relation between the limiting $r$-band magnitude and the effective number density, fit to the KiDS data, we imprint the variable depth of the full KiDS-1000 footprint \citep{Kuijken:2019} on a {\sc{Healpix}}\footnote{\url{https://healpix.sourceforge.io}} grid of Nside=4096.  Our resolution choice represents a compromise between minimising the mock computation time and maximising the accuracy of the recovered shear signal at small angular scales. With Nside=4096, $\xi_+$ is accurate to 7\% above $\sim 1$ arcmin, and $\xi_-$ is accurate to 10\% above $\sim6$ arcmin.   For each {\sc{Healpix}} pixel in the KiDS-1000 data, the limiting $r$-band magnitude defines the effective number density of sources, and the average source redshift distribution for each tomographic redshift bin (see Fig.~\ref{fig:nofz_quantiles}).  In the uniform depth case, redshifts and number densities are sampled from the average of these tomographic sets.  The ratio of the lensing signals from the two mocks is computed, averaged over 2000 shape-noise-free realizations, and is shown in Fig.~\ref{fig:all_xis} (red).
 
 The results can be seen in Fig.~\ref{fig:all_xis}.
   \begin{figure*}
